# django-webawesome-form

./: README.md  pyproject.toml
.github/workflows/: publish.yaml
django_webawesome_form/: renderers.py  widgets.py
django_webawesome_form/templates/django/forms/: field.html
django_webawesome_form/templates/django/forms/errors/list/: default.html
django_webawesome_form/templates/django/forms/widgets/: file.html  input.html  radio_group_button.html  search.html  select_option.html  slots.html  textarea.html
src/django_webawesome_form/: widgets.py
src/django_webawesome_form/templates/django/forms/: field.html
src/django_webawesome_form/templates/django/forms/widgets/: checkbox.html  radio.html  select.html  switch.html
