[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "django-webawesome-form"
version = "0.2"
dependencies = [
    "django>=5.2",
]
description = "Seamlessly render Django forms with Web Awesome"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">= 3.10"
authors = [
    {name = "Francesco Pongiluppi", email = "francescop@fem.digital"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/fem-modena/django-webawesome-form"

[tool.uv.build-backend]
source-include = ["django_polls/templates/**/*"]